k8s-cluster-configuration/applications/md/previews/md-pr-4/gateway.yml
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: md-pr-4-gateway
  namespace: md-pr-4
  annotations:
    external-dns.alpha.kubernetes.io/hostname: "md-pr-4.k6nis.dev"
    external-dns.alpha.kubernetes.io/cloudflare-proxied: "true"
spec:
  gatewayClassName: traefik
  listeners:
    - name: https
      protocol: HTTPS
      port: 8443
      hostname: "md-pr-4.k6nis.dev"
      tls:
        mode: Terminate
        certificateRefs:
          - group: ''
            kind: Secret
            name: md-pr-4-tls
      allowedRoutes:
        namespaces:
          from: Same
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: md-pr-4
  namespace: md-pr-4
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: md-pr-4-gateway
      namespace: md-pr-4
  hostnames:
    - "md-pr-4.k6nis.dev"
  rules:
    - backendRefs:
        - group: ''
          kind: Service
          name: md-pr-4-service
          port: 80
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
